5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1723_2496.log
== TEST (2019-05-11 14:40:47) 
-- CODE:
num = int(input("digite um numero: "))
while(num!=-1):
	num = num + num
	print(num)
-- OUTPUT:
-1050
-2100
-4200
-8400
-16800
-33600
-67200
-134400
-268800
-537600
-1075200
-2150400
-4300800
-8601600
-17203200
-34406400
-68812800
-137625600
-275251200
-550502400
-1101004800
-2202009600
-4404019200
-8808038400
-17616076800
-35232153600
-70464307200
-140928614400
-281857228800
-563714457600
-1127428915200
-2254857830400
-4509715660800
-9019431321600
-18038862643200
-36077725286400
-72155450572800
-144310901145600
-288621802291200
-577243604582400
-1154487209164800
-2308974418329600
-4617948836659200
-9235897673318400
-18471795346636800
-36943590693273600
-73887181386547200
-147774362773094400
-295548725546188800
-591097451092377600
-1182194902184755200
-2364389804369510400
-4728779608739020800
-9457559217478041600
-18915118434956083200
-37830236869912166400
-75660473739824332800
-151320947479648665600
-302641894959297331200
-605283789918594662400
-1210567579837189324800
-2421135159674378649600
-4842270319348757299200
-9684540638697514598400
-19369081277395029196800
-38738162554790
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:41:01) 
-- CODE:
num = int(input("digite um numero: "))
while(num!=-1):
	num = num + num
	print(num)
-- OUTPUT:
-1050
-2100
-4200
-8400
-16800
-33600
-67200
-134400
-268800
-537600
-1075200
-2150400
-4300800
-8601600
-17203200
-34406400
-68812800
-137625600
-275251200
-550502400
-1101004800
-2202009600
-4404019200
-8808038400
-17616076800
-35232153600
-70464307200
-140928614400
-281857228800
-563714457600
-1127428915200
-2254857830400
-4509715660800
-9019431321600
-18038862643200
-36077725286400
-72155450572800
-144310901145600
-288621802291200
-577243604582400
-1154487209164800
-2308974418329600
-4617948836659200
-9235897673318400
-18471795346636800
-36943590693273600
-73887181386547200
-147774362773094400
-295548725546188800
-591097451092377600
-1182194902184755200
-2364389804369510400
-4728779608739020800
-9457559217478041600
-18915118434956083200
-37830236869912166400
-75660473739824332800
-151320947479648665600
-302641894959297331200
-605283789918594662400
-1210567579837189324800
-2421135159674378649600
-4842270319348757299200
-9684540638697514598400
-19369081277395029196800
-38738162554790
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:41:09) 
-- CODE:
num = int(input("digite um numero: "))
while(num!=-1):
	num = num + num
	print(num)
-- OUTPUT:
-1050
-2100
-4200
-8400
-16800
-33600
-67200
-134400
-268800
-537600
-1075200
-2150400
-4300800
-8601600
-17203200
-34406400
-68812800
-137625600
-275251200
-550502400
-1101004800
-2202009600
-4404019200
-8808038400
-17616076800
-35232153600
-70464307200
-140928614400
-281857228800
-563714457600
-1127428915200
-2254857830400
-4509715660800
-9019431321600
-18038862643200
-36077725286400
-72155450572800
-144310901145600
-288621802291200
-577243604582400
-1154487209164800
-2308974418329600
-4617948836659200
-9235897673318400
-18471795346636800
-36943590693273600
-73887181386547200
-147774362773094400
-295548725546188800
-591097451092377600
-1182194902184755200
-2364389804369510400
-4728779608739020800
-9457559217478041600
-18915118434956083200
-37830236869912166400
-75660473739824332800
-151320947479648665600
-302641894959297331200
-605283789918594662400
-1210567579837189324800
-2421135159674378649600
-4842270319348757299200
-9684540638697514598400
-19369081277395029196800
-38738162554790
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:41:14) 
-- CODE:
num = int(input("digite um numero: "))
while(num!=-1):
	num = num + 1
	print(num)
-- OUTPUT:
-524
-523
-522
-521
-520
-519
-518
-517
-516
-515
-514
-513
-512
-511
-510
-509
-508
-507
-506
-505
-504
-503
-502
-501
-500
-499
-498
-497
-496
-495
-494
-493
-492
-491
-490
-489
-488
-487
-486
-485
-484
-483
-482
-481
-480
-479
-478
-477
-476
-475
-474
-473
-472
-471
-470
-469
-468
-467
-466
-465
-464
-463
-462
-461
-460
-459
-458
-457
-456
-455
-454
-453
-452
-451
-450
-449
-448
-447
-446
-445
-444
-443
-442
-441
-440
-439
-438
-437
-436
-435
-434
-433
-432
-431
-430
-429
-428
-427
-426
-425
-424
-423
-422
-421
-420
-419
-418
-417
-416
-415
-414
-413
-412
-411
-410
-409
-408
-407
-406
-405
-404
-403
-402
-401
-400
-399
-398
-397
-396
-395
-394
-393
-392
-391
-390
-389
-388
-387
-386
-385
-384
-383
-382
-381
-380
-379
-378
-377
-376
-375
-374
-373
-372
-371
-370
-369
-368
-367
-366
-365
-364
-363
-362
-361
-360
-359
-358
-357
-356
-355
-354
-353
-352
-351
-350
-349
-348
-347
-346
-345
-344
-343
-342
-341
-340
-339
-338
-337
-336
-335
-334
-333
-332
-331
-330
-329
-328
-327
-326
-325
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:41:49) 
-- CODE:
num = int(input("digite um numero: "))
while(num!=-1):
	num = num + 1
	print(num)
-- OUTPUT:
-524
-523
-522
-521
-520
-519
-518
-517
-516
-515
-514
-513
-512
-511
-510
-509
-508
-507
-506
-505
-504
-503
-502
-501
-500
-499
-498
-497
-496
-495
-494
-493
-492
-491
-490
-489
-488
-487
-486
-485
-484
-483
-482
-481
-480
-479
-478
-477
-476
-475
-474
-473
-472
-471
-470
-469
-468
-467
-466
-465
-464
-463
-462
-461
-460
-459
-458
-457
-456
-455
-454
-453
-452
-451
-450
-449
-448
-447
-446
-445
-444
-443
-442
-441
-440
-439
-438
-437
-436
-435
-434
-433
-432
-431
-430
-429
-428
-427
-426
-425
-424
-423
-422
-421
-420
-419
-418
-417
-416
-415
-414
-413
-412
-411
-410
-409
-408
-407
-406
-405
-404
-403
-402
-401
-400
-399
-398
-397
-396
-395
-394
-393
-392
-391
-390
-389
-388
-387
-386
-385
-384
-383
-382
-381
-380
-379
-378
-377
-376
-375
-374
-373
-372
-371
-370
-369
-368
-367
-366
-365
-364
-363
-362
-361
-360
-359
-358
-357
-356
-355
-354
-353
-352
-351
-350
-349
-348
-347
-346
-345
-344
-343
-342
-341
-340
-339
-338
-337
-336
-335
-334
-333
-332
-331
-330
-329
-328
-327
-326
-325
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:49:33) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite um numero: "))
while(num!=-1):
	soma= soma + nota
	print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma= soma + nota
NameError: name 'nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 14:49:50) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite um numero: "))
while(num!=-1):
	soma= soma + num
	print(soma)
-- OUTPUT:
-525
-1050
-1575
-2100
-2625
-3150
-3675
-4200
-4725
-5250
-5775
-6300
-6825
-7350
-7875
-8400
-8925
-9450
-9975
-10500
-11025
-11550
-12075
-12600
-13125
-13650
-14175
-14700
-15225
-15750
-16275
-16800
-17325
-17850
-18375
-18900
-19425
-19950
-20475
-21000
-21525
-22050
-22575
-23100
-23625
-24150
-24675
-25200
-25725
-26250
-26775
-27300
-27825
-28350
-28875
-29400
-29925
-30450
-30975
-31500
-32025
-32550
-33075
-33600
-34125
-34650
-35175
-35700
-36225
-36750
-37275
-37800
-38325
-38850
-39375
-39900
-40425
-40950
-41475
-42000
-42525
-43050
-43575
-44100
-44625
-45150
-45675
-46200
-46725
-47250
-47775
-48300
-48825
-49350
-49875
-50400
-50925
-51450
-51975
-52500
-53025
-53550
-54075
-54600
-55125
-55650
-56175
-56700
-57225
-57750
-58275
-58800
-59325
-59850
-60375
-60900
-61425
-61950
-62475
-63000
-63525
-64050
-64575
-65100
-65625
-66150
-66675
-67200
-67725
-68250
-68775
-69300
-69825
-70350
-70875
-71400
-71925
-72450
-72975
-73500
-74025
-74550
-75075
-75600
-76125
-7665
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:29:28) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite um numero: "))
while(num!=-1):
	soma= soma + num
	cont= cont + 1
	print(soma)
-- OUTPUT:
-525
-1050
-1575
-2100
-2625
-3150
-3675
-4200
-4725
-5250
-5775
-6300
-6825
-7350
-7875
-8400
-8925
-9450
-9975
-10500
-11025
-11550
-12075
-12600
-13125
-13650
-14175
-14700
-15225
-15750
-16275
-16800
-17325
-17850
-18375
-18900
-19425
-19950
-20475
-21000
-21525
-22050
-22575
-23100
-23625
-24150
-24675
-25200
-25725
-26250
-26775
-27300
-27825
-28350
-28875
-29400
-29925
-30450
-30975
-31500
-32025
-32550
-33075
-33600
-34125
-34650
-35175
-35700
-36225
-36750
-37275
-37800
-38325
-38850
-39375
-39900
-40425
-40950
-41475
-42000
-42525
-43050
-43575
-44100
-44625
-45150
-45675
-46200
-46725
-47250
-47775
-48300
-48825
-49350
-49875
-50400
-50925
-51450
-51975
-52500
-53025
-53550
-54075
-54600
-55125
-55650
-56175
-56700
-57225
-57750
-58275
-58800
-59325
-59850
-60375
-60900
-61425
-61950
-62475
-63000
-63525
-64050
-64575
-65100
-65625
-66150
-66675
-67200
-67725
-68250
-68775
-69300
-69825
-70350
-70875
-71400
-71925
-72450
-72975
-73500
-74025
-74550
-75075
-75600
-76125
-7665
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:30:21) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite um numero: "))
while(num!=-1):
	soma= soma + num
	cont= cont + 1
	print(soma)
-- OUTPUT:
-525
-1050
-1575
-2100
-2625
-3150
-3675
-4200
-4725
-5250
-5775
-6300
-6825
-7350
-7875
-8400
-8925
-9450
-9975
-10500
-11025
-11550
-12075
-12600
-13125
-13650
-14175
-14700
-15225
-15750
-16275
-16800
-17325
-17850
-18375
-18900
-19425
-19950
-20475
-21000
-21525
-22050
-22575
-23100
-23625
-24150
-24675
-25200
-25725
-26250
-26775
-27300
-27825
-28350
-28875
-29400
-29925
-30450
-30975
-31500
-32025
-32550
-33075
-33600
-34125
-34650
-35175
-35700
-36225
-36750
-37275
-37800
-38325
-38850
-39375
-39900
-40425
-40950
-41475
-42000
-42525
-43050
-43575
-44100
-44625
-45150
-45675
-46200
-46725
-47250
-47775
-48300
-48825
-49350
-49875
-50400
-50925
-51450
-51975
-52500
-53025
-53550
-54075
-54600
-55125
-55650
-56175
-56700
-57225
-57750
-58275
-58800
-59325
-59850
-60375
-60900
-61425
-61950
-62475
-63000
-63525
-64050
-64575
-65100
-65625
-66150
-66675
-67200
-67725
-68250
-68775
-69300
-69825
-70350
-70875
-71400
-71925
-72450
-72975
-73500
-74025
-74550
-75075
-75600
-76125
-7665
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:30:27) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite um numero: "))
while(num!=-1):
	soma= soma + num
	cont= cont + 1
	print(soma)
-- OUTPUT:
-525
-1050
-1575
-2100
-2625
-3150
-3675
-4200
-4725
-5250
-5775
-6300
-6825
-7350
-7875
-8400
-8925
-9450
-9975
-10500
-11025
-11550
-12075
-12600
-13125
-13650
-14175
-14700
-15225
-15750
-16275
-16800
-17325
-17850
-18375
-18900
-19425
-19950
-20475
-21000
-21525
-22050
-22575
-23100
-23625
-24150
-24675
-25200
-25725
-26250
-26775
-27300
-27825
-28350
-28875
-29400
-29925
-30450
-30975
-31500
-32025
-32550
-33075
-33600
-34125
-34650
-35175
-35700
-36225
-36750
-37275
-37800
-38325
-38850
-39375
-39900
-40425
-40950
-41475
-42000
-42525
-43050
-43575
-44100
-44625
-45150
-45675
-46200
-46725
-47250
-47775
-48300
-48825
-49350
-49875
-50400
-50925
-51450
-51975
-52500
-53025
-53550
-54075
-54600
-55125
-55650
-56175
-56700
-57225
-57750
-58275
-58800
-59325
-59850
-60375
-60900
-61425
-61950
-62475
-63000
-63525
-64050
-64575
-65100
-65625
-66150
-66675
-67200
-67725
-68250
-68775
-69300
-69825
-70350
-70875
-71400
-71925
-72450
-72975
-73500
-74025
-74550
-75075
-75600
-76125
-7665
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:31:36) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite um numero: "))
while(num!=-1):
	soma= soma + num
	cont= cont + 1
	print(soma)
-- OUTPUT:
-525
-1050
-1575
-2100
-2625
-3150
-3675
-4200
-4725
-5250
-5775
-6300
-6825
-7350
-7875
-8400
-8925
-9450
-9975
-10500
-11025
-11550
-12075
-12600
-13125
-13650
-14175
-14700
-15225
-15750
-16275
-16800
-17325
-17850
-18375
-18900
-19425
-19950
-20475
-21000
-21525
-22050
-22575
-23100
-23625
-24150
-24675
-25200
-25725
-26250
-26775
-27300
-27825
-28350
-28875
-29400
-29925
-30450
-30975
-31500
-32025
-32550
-33075
-33600
-34125
-34650
-35175
-35700
-36225
-36750
-37275
-37800
-38325
-38850
-39375
-39900
-40425
-40950
-41475
-42000
-42525
-43050
-43575
-44100
-44625
-45150
-45675
-46200
-46725
-47250
-47775
-48300
-48825
-49350
-49875
-50400
-50925
-51450
-51975
-52500
-53025
-53550
-54075
-54600
-55125
-55650
-56175
-56700
-57225
-57750
-58275
-58800
-59325
-59850
-60375
-60900
-61425
-61950
-62475
-63000
-63525
-64050
-64575
-65100
-65625
-66150
-66675
-67200
-67725
-68250
-68775
-69300
-69825
-70350
-70875
-71400
-71925
-72450
-72975
-73500
-74025
-74550
-75075
-75600
-76125
-7665
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 15:38:16) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while(num!=-1):
	soma= soma + num
	num = int(input("digite um numero: "))
print(soma)
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 15:38:30) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while(num!=-1):
	soma= soma + num
	num = int(input("digite um numero: "))
print(soma)
-- EXECUTION TIME:
0.527508
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
